--- a/index.html
+++ b/index.html
@@ -43,10 +43,6 @@
             0% { opacity: 0; }
             100% { opacity: 1; }
         }
-
-        .visible {
-            opacity: 1;
-        }
     </style>
 </head>
 <body>
@@ -62,40 +58,19 @@
             const airsoft = document.getElementById('airsoft');
             const autism = document.getElementById('autism');
 
-            // Keep "Airsoft" visible for a few more seconds
+            // Start the crumble animation
+            airsoft.classList.add('crumbled');
+
+            // After the crumble animation finishes, replace with "Autism"
             setTimeout(() => {
-                // Start the crumble animation
-                airsoft.classList.add('crumbled');
-
-                // After the crumble animation finishes, replace with "Autism"
-                setTimeout(() => {
-                    airsoft.classList.add('hidden');
-                    autism.classList.remove('hidden');
-                    autism.classList.add('reveal');
-                }, 2000); // Match with the crumble animation duration
-            }, 3000); // Wait for 3 seconds before starting the crumble
-        }
-
-        function resetAnimation() {
-            const airsoft = document.getElementById('airsoft');
-            const autism = document.getElementById('autism');
-
-            // Reset to initial state
-            airsoft.classList.remove('crumbled', 'hidden');
-            autism.classList.add('hidden');
-            autism.classList.remove('reveal');
-
-            // Start the animation again
-            crumbleText();
+                airsoft.classList.add('hidden');
+                autism.classList.remove('hidden');
+                autism.classList.add('reveal');
+            }, 2000); // Match with the crumble animation duration
         }
 
         // Start the animation on page load
-        window.onload = () => {
-            crumbleText();
-
-            // Loop the animation every 10 seconds (3s visible, 2s crumble, 5s pause)
-            setInterval(resetAnimation, 10000);
-        };
+        window.onload = crumbleText;
     </script>
 </body>
 </html>
