--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Airsoft New Brunswick Animation</title>
+    <title>Quakes Dev Zone</title>
     <style>
         body {
             font-family: Arial, sans-serif;
             display: flex;
+            flex-direction: column;
             justify-content: center;
             align-items: center;
             height: 100vh;
@@ -19,61 +20,83 @@
             text-align: center;
         }
 
-        .crumbled {
+        /* Logo styling */
+        .logo {
+            width: 100px;
+            margin-bottom: 20px;
+        }
+
+        h1 {
+            font-size: 3em;
+            margin: 0;
+        }
+
+        .shaking {
             display: inline-block;
-            animation: crumble 2s forwards;
-            opacity: 1;
+            animation: shake 2s ease-in-out;
         }
 
         .hidden {
             display: none;
         }
 
-        @keyframes crumble {
-            0% { opacity: 1; transform: translateY(0); }
-            100% { opacity: 0; transform: translateY(100px); }
+        @keyframes shake {
+            0% { transform: translate(1px, 1px) rotate(0deg); }
+            10% { transform: translate(-1px, -2px) rotate(-1deg); }
+            20% { transform: translate(-3px, 0px) rotate(1deg); }
+            30% { transform: translate(3px, 2px) rotate(0deg); }
+            40% { transform: translate(1px, -1px) rotate(1deg); }
+            50% { transform: translate(-1px, 2px) rotate(-1deg); }
+            60% { transform: translate(-3px, 1px) rotate(0deg); }
+            70% { transform: translate(3px, 1px) rotate(-1deg); }
+            80% { transform: translate(-1px, -1px) rotate(1deg); }
+            90% { transform: translate(1px, 2px) rotate(0deg); }
+            100% { transform: translate(1px, -2px) rotate(-1deg); }
         }
 
-        .reveal {
-            opacity: 0;
-            animation: revealText 2s forwards;
+        .still {
+            display: inline-block;
+            animation: none;
         }
 
-        @keyframes revealText {
-            0% { opacity: 0; }
-            100% { opacity: 1; }
+        .content {
+            margin-top: 30px;
+            font-size: 1.2em;
+            max-width: 600px;
+            text-align: left;
+            line-height: 1.6;
         }
     </style>
 </head>
 <body>
     <div class="container">
+        <!-- Logo image (placeholder or real image can be linked) -->
+        <img src="logo.png" alt="Quakes Dev Zone Logo" class="logo">
+
         <h1>
-            <span id="airsoft" class="crumbled">Airsoft</span>
-            <span id="autism" class="hidden reveal">Autism</span> New Brunswick
+            <span id="quake" class="shaking">Quake</span> 
+            <span>Dev Zone</span>
         </h1>
+
+        <!-- Placeholder content for the blog -->
+        <div class="content">
+            <p>Welcome to the Quakes Dev Zone, your hub for all things related to coding, development, and tech insights. Stay tuned for tutorials, project updates, and coding challenges!</p>
+        </div>
     </div>
 
     <script>
-        function crumbleText() {
-            const airsoft = document.getElementById('airsoft');
-            const autism = document.getElementById('autism');
+        function stopShaking() {
+            const quake = document.getElementById('quake');
 
-            // Keep "Airsoft" visible for 2 more seconds before starting the crumble animation
+            // After the shaking animation finishes, stop the shake and set it still
             setTimeout(() => {
-                // Start the crumble animation
-                airsoft.classList.add('crumbled');
-
-                // After the crumble animation finishes, replace with "Autism"
-                setTimeout(() => {
-                    airsoft.classList.add('hidden');
-                    autism.classList.remove('hidden');
-                    autism.classList.add('reveal');
-                }, 2000); // Match with the crumble animation duration
-            }, 2000); // Wait for 2 seconds before starting the crumble
+                quake.classList.remove('shaking');
+                quake.classList.add('still');
+            }, 2000); // Shaking for 2 seconds
         }
 
         // Start the animation on page load
-        window.onload = crumbleText;
+        window.onload = stopShaking;
     </script>
 </body>
 </html>
