--- a/rezzy.html
+++ b/rezzy.html
@@ -14,6 +14,7 @@
             height: 100vh;
             margin: 0;
             background-color: #f0f0f0;
+            overflow: hidden;
         }
 
         h1 {
@@ -47,6 +48,14 @@
             color: red;
             text-align: center;
             margin-top: 20px;
+            display: none;
+        }
+
+        /* Flash animation */
+        @keyframes flash {
+            0% { background-color: green; }
+            50% { background-color: white; }
+            100% { background-color: green; }
         }
     </style>
 </head>
@@ -54,7 +63,7 @@
     <h1>REZZY THE PEAT SNAKE</h1>
     <button id="startBtn">Start</button>
     <canvas id="snakeGame" width="400" height="400" style="display:none;"></canvas>
-    <div class="message" id="message"></div>
+    <div class="message" id="message">REZZY ROLLERBLADES TO WORK</div>
 
     <script>
         const canvas = document.getElementById("snakeGame");
@@ -117,8 +126,7 @@
 
                 // End game when 10 bundles are eaten
                 if (score === 10) {
-                    document.getElementById("message").textContent = "Rezzy rollerblades to work";
-                    clearInterval(game);
+                    endGame();
                 }
             } else {
                 // Remove the tail
@@ -134,6 +142,14 @@
             }
 
             snake.unshift(newHead);
+        }
+
+        function endGame() {
+            clearInterval(game);
+            document.getElementById("message").style.display = "block";
+
+            // Start flashing the screen
+            document.body.style.animation = "flash 0.5s infinite";
         }
 
         function collision(head, snake) {
