--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         <img src="logo.png" alt="Quakes Dev Zone Logo" class="logo">
 
         <h1>
-            <span id="quake" class="shaking">Quake</span> 
+            <span id="quake" class="shaking">Quake</span>
             <span>Dev Zone</span>
         </h1>
 
@@ -101,7 +101,9 @@
             <div class="box">
                 <a href="rezzy.html">Rezzy The Peat Snake</a>
             </div>
-            <div class="box">Box 3</div>
+            <div class="box">
+                <a href="game.html">GAME</a>
+            </div>
             <div class="box">Box 4</div>
             <div class="box">Box 5</div>
             <div class="box">Box 6</div>
